# inridge

./: Cargo.toml  Dockerfile  index.html  readme.md
assets/: models.gltf
assets/data/: intro.stage.ron
assets/shaders/: default_billboard.wgsl  default_displacement.wgsl  default_effect.wgsl  default_layered.wgsl  default_terrain.wgsl  default_unlit.wgsl  effect_barrier.wgsl  effect_explosion.wgsl  effect_indicator.wgsl  effect_lightning.wgsl  effect_matter.wgsl  effect_radial.wgsl  effect_reconstruct.wgsl  effect_scanline.wgsl  effect_tentacle.wgsl  effect_trail.wgsl  model_effect.wgsl  post_effect_displacement.wgsl  skybox_nebula.wgsl
content/: effects.sbs  materials.sbs  models_backup_20012023.blend  readme.md  terrain.sbs
prototype/: common.js  crowd.html  index.html  interrupt.html  lib.js  main.js  mechanics.js
src/: input.rs  main.rs
src/common/: ease.rs  gizmo.rs  loader.rs  mod.rs  raycast.rs  rig.rs  spline.rs
src/effects/: audio.rs  linker.rs  mod.rs
src/extensions/: commands.rs  hierarchy.rs  mod.rs  post_process.rs  render_texture.rs  shared.rs  skybox.rs
src/interaction/: action.rs  event.rs  mod.rs  path.rs  selection.rs  transition.rs  view.rs
src/interface/: construct.rs  control.rs  deconstruct.rs  indicator.rs  layout.rs  menu.rs  mod.rs  shared.rs  toggle.rs  trigger.rs
src/logic/: agent.rs  distribution.rs  economy.rs  event.rs  fabrication.rs  foundation.rs  group.rs  military.rs  mod.rs  movement.rs  strategy.rs
src/materials/: barrier.rs  billboard.rs  color_uniform.rs  condition.rs  displacement.rs  explosion.rs  indicator.rs  (+11 more)
(+115 files in other folders)
